# XtermGUI

./: .gitignore  DOCUMENTATION.md  README.md  dockerfile  main.py  pyproject.toml
.github/workflows/: python-publish.yml
consolegui/control/: colour.py  colours.py  rgbs.py  text.py
consolegui/gui/: __init__.py  gui.py  mouse_interaction.py  supports_string.py
consolegui/input/: input.py  setup.py
consolegui/layered_gui/: gui.py  layer.py
sudoku_test/: __init__.py  board.py  entry.py  gui.py  solver.py  sudoku.py
xtermgui/: __init__.py
xtermgui/control/: __init__.py  characters.py  colour.py  cursor.py  escape_sequence.py  escape_sequences.py  style.py  text.py
xtermgui/cursor/: cursor.py
xtermgui/geometry/: coordinate.py
xtermgui/gui/: __init__.py  event_handler.py  event_handlers.py  gui.py  input_state.py  keyboard_interaction.py  mouse_interaction.py
xtermgui/input/: __init__.py  event.py  input.py  input_codes.py  lock.py  setup.py
xtermgui/layered_gui/: gui.py  layer.py
xtermgui/terminal/: __init__.py  cursor.py  terminal.py
xtermgui/text/: __init__.py  character_info.py  characters.py  colour.py  colours.py  effect.py  escape_sequence.py  escape_sequences.py  rgb.py  style.py  styles.py  text.py  text_colour.py  text_colours.py
xtermgui/utilities/: __init__.py  console_inputs.py  inputs.py  killable_thread.py  singleton.py  worker_process.py
xtermgui/utils/: __init__.py
